--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":"20.10.0"
+  },
   "name": "majorproject",
   "version": "1.0.0",
   "description": "",
@@ -11,6 +14,7 @@
   "dependencies": {
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
